# StratumBee

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
assets/: dashboard.html
config/: stratumbee.toml
deploy/systemd/: stratumbee.service
src/: api.rs  config.rs  hash.rs  main.rs  metrics.rs  p2p.rs  rpc.rs  share.rs  stratum.rs  template.rs  vardiff.rs
