[package]
name = "stratumbee"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Lightweight solo Bitcoin Stratum V1 gateway for low-resource hosts"

[dependencies]
anyhow = "1"
axum = "0.7"
bitcoin = "0.31"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zmq = "0.10"
